--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,9 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
     "@fontsource/noto-sans": "^5.0.22",
-    "astro": "^4.11.6",
-    "tailwindcss": "^3.4.6"
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "5.7.10",
+    "tailwindcss": "^4.1.5"
   }
 }
